Implement Assignment 2: TLS security + F2b primary/secondary replication
Security:
- TLSUtils: auto-loads server keystore from <hostname>.ks, client truststore
  from CLIENT_TRUSTSTORE env var or client-truststore.ks
- AbstractRestServer: switches to https:// URI + announces with IP.hostname()
  for correct TLS certificate validation; falls back to http if no keystore
- RestClient: HTTPS-aware with configurable SSL context and redirect following
- AbstractGrpcServer: uses hostname (not IP) in announced gRPC URI

Replication (F2b primary/secondary):
- ReplicatedOperation: encodes all write ops with seqNum + optional sid for
  inter-domain deduplication
- ReplicationManager: tracks version (AtomicLong), secondary list, primary URI
- JavaMessagesRep: two-phase execution — phase 1 validates + computes recipients,
  phase 2 (deterministic) applied by all replicas; all writes overridden
- VersionHeaderHandler: ContainerRequest/ResponseFilter to propagate
  X-MESSAGES-version header via ThreadLocal (Alt 3 from notes)
- RestAdminMessagesRepClient: SID-aware inter-domain client
- RestMessagesRepResource: handles client ops (redirect writes to primary),
  admin forwarding, replication endpoint, and secondary registration
- RestMessagesRepServer: starts as primary (announces MessagesPrimary@domain)
  or secondary (discovers primary, registers itself)

Config:
- messages.props: filled in with MESSAGES_REP_* and TLS keystore properties
- generate-keystores.sh: creates PKCS12 keystores + truststore via keytool
- Dockerfile: copies tls/*.ks into Docker image

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>