@@ -9,30 +9,38 @@ import org.glassfish.jersey.server.ResourceConfig;
 import sd2526.trab.impl.discovery.Discovery;
 import sd2526.trab.impl.java.servers.AbstractServer;
 import sd2526.trab.impl.utils.IP;
-
-
+import sd2526.trab.impl.utils.TLSUtils;
 
 public abstract class AbstractRestServer extends AbstractServer {
-	private static final String SERVER_BASE_URI = "http://%s:%s%s";
-	private static final String REST_CTX = "/rest";
 
-	protected AbstractRestServer(Logger log, String service, int port) {
-		super(log, service, String.format(SERVER_BASE_URI, IP.hostAddress(), port, REST_CTX));
-	}
+    private static final String REST_CTX = "/rest";
 
-	protected void start() {
-		
-		ResourceConfig config = new ResourceConfig();
-		
-		registerResources( config );
-		
-		JdkHttpServerFactory.createHttpServer( URI.create(serverURI.replace(IP.hostAddress(), INETADDR_ANY)), config);
-		
-		if( service != null )
-			Discovery.getInstance().announce(serviceName(), super.serverURI);
-		
-		Log.info(String.format("%s Server ready @ %s\n",  service, serverURI));
-	}
-	
-	abstract void registerResources( ResourceConfig config );
+    private static String scheme() {
+        return TLSUtils.keystoreExists(IP.hostname()) ? "https" : "http";
+    }
+
+    protected AbstractRestServer(Logger log, String service, int port) {
+        super(log, service, "%s://%s:%d%s".formatted(scheme(), IP.hostname(), port, REST_CTX));
+    }
+
+    protected void start() {
+        var config = new ResourceConfig();
+        registerResources(config);
+
+        var bindUri = URI.create(serverURI.replace(IP.hostname(), INETADDR_ANY));
+
+        if (serverURI.startsWith("https://")) {
+            var sslCtx = TLSUtils.serverContext(IP.hostname() + ".ks", TLSUtils.DEFAULT_PWD);
+            JdkHttpServerFactory.createHttpServer(bindUri, config, sslCtx);
+        } else {
+            JdkHttpServerFactory.createHttpServer(bindUri, config);
+        }
+
+        if (service != null)
+            Discovery.getInstance().announce(serviceName(), serverURI);
+
+        Log.info("%s Server ready @ %s\n".formatted(service, serverURI));
+    }
+
+    abstract void registerResources(ResourceConfig config);
 }
